--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ Switcheo Exchange programatically.</p>
 <p>The Switcheo API uses <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> architecture.
 API requests and responses use the <a href="https://www.json.org/">JSON</a> format.</p>
 
-<p>There are two main types of API endpoints.</p>
+<p>There are two types of API endpoints.</p>
 
 <ul>
 <li>Exchange APIs - these endpoints provide exchange history, statistics and other data and do not need to be authenticated</li>
@@ -403,7 +403,7 @@ API requests and responses use the <a href="https://www.json.org/">JSON</a> form
 <p>All endpoints are rate-limited. We use a dynamic algorithm for determining these limits. The HTTP error code <code>429</code> will
 be returned if this limit is exceeded. You should implement an exponential backoff strategy when encountering this error code.</p>
 <h1 id='authentication'>Authentication</h1>
-<p>As a decentralised exchange, Switcheo does not use any sort of password or API key.
+<p>As a decentralised exchange, Switcheo does not use passwords or API keys.
 Instead, authentication is done by signing the <strong>request payload</strong> <em>or</em> <strong>blockchain transaction</strong> using the <strong>blockchain-specific</strong>
 digital signature with the user&#39;s private key.</p>
 <h2 id='action-authentication'>Action Authentication</h2>
@@ -505,10 +505,10 @@ digital signature with the user&#39;s private key.</p>
 <span class="c1">// send the result to the second API endpoint</span>
 <span class="kr">const</span> <span class="nx">signatureToSend</span> <span class="o">=</span> <span class="nx">signTransaction</span><span class="p">(</span><span class="nx">transaction</span><span class="p">,</span> <span class="s1">'&lt;private key&gt;'</span><span class="p">)</span>
 </code></pre>
-<p>The second step of an action usually requires a transaction to be signed, this is done by:</p>
+<p>The second step of an action usually requires the returned transaction to be signed, this is done by:</p>
 
 <ol>
-<li>Checking the transaction data to ensure it matches the user&#39;s intention</li>
+<li>Checking the returned transaction data to ensure it matches the user&#39;s intention</li>
 <li>Serializing the transaction, this can be done with <a href="https://github.com/CityOfZion/neon-js">neon-js</a>
 (<a href="https://github.com/CityOfZion/neon-js/blob/c6a169a82a4d037e00dccd424f53cdc818d6b3ae/src/transactions/core.js#L79">View implementation details</a>)</li>
 <li>Signing the serialized transaction with the user&#39;s private key</li>
@@ -670,7 +670,7 @@ Authentication is not required for these endpoints.</p>
 <span class="p">]</span>
 
 </code></pre>
-<p>Returns available currency <a href="#currency_pairs">pairs</a> on Switcheo Exchange filtered by the <code>base</code> parameter. Defaults to all pairs.</p>
+<p>Returns available currency pairs on Switcheo Exchange filtered by the <code>base</code> parameter. Defaults to all pairs.</p>
 <h3 id='currency-pairs'>Currency Pairs</h3>
 <p>When trading on Switcheo Exchange, markets are represented as currency pairs.</p>
 
@@ -1055,7 +1055,7 @@ To be able to make a deposit, sufficient funds are required in the depositing wa
 <td>contract_hash</td>
 <td><strong>string</strong></td>
 <td>yes</td>
-<td>Switcheo Exchange <a href="#contract-hash">contract hash</a> to execute the deposit on.</td>
+<td>Switcheo Exchange <a href="#contracts">contract hash</a> to execute the deposit on.</td>
 </tr>
 <tr>
 <td>timestamp</td>
@@ -1220,7 +1220,7 @@ To be able to make a withdrawal, sufficient funds are required in the contract b
 <td>contract_hash</td>
 <td><strong>string</strong></td>
 <td>yes</td>
-<td>Switcheo Exchange <a href="#contract-hash">contract hash</a> to execute the withdraw on.</td>
+<td>Switcheo Exchange <a href="#contracts">contract hash</a> to execute the withdraw on.</td>
 </tr>
 <tr>
 <td>signature</td>
@@ -1350,10 +1350,10 @@ you will receive a response which requires additional signing.</p>
     </span><span class="s2">"makes"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="err">...</span><span class="p">]</span><span class="w">
   </span><span class="p">}</span><span class="w">
 </span><span class="p">]</span><span class="w">
-</span></code></pre><h3 id='parameters'>Parameters</h3>
+</span></code></pre>
 <table><thead>
 <tr>
-<th>Parameter</th>
+<th>Attribute</th>
 <th>Description</th>
 </tr>
 </thead><tbody>
@@ -1367,7 +1367,7 @@ you will receive a response which requires additional signing.</p>
 </tr>
 <tr>
 <td>contract_hash</td>
-<td>Switcheo Exchange <a href="#contract-hash">contract hash</a> that the order is on.</td>
+<td>Switcheo Exchange <a href="#contracts">contract hash</a> that the order is on.</td>
 </tr>
 <tr>
 <td>address</td>
@@ -1452,10 +1452,10 @@ you will receive a response which requires additional signing.</p>
   </span><span class="s2">"trades"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="err">...</span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
-<p>When an order created, the order matching engine will match the order against existing offers.
-  If no offer is filled by the order, the matching engine will generate a <code>make</code> transaction within the order.
+<p>When an order is created, the order matching engine will match the order against existing offers.
+  If no offer is filled by the order, the matching engine will generate a <code>make</code> transaction that is returned with order.
   This transaction must be signed when using the <a href="#execute-order">broadcast order endpoint</a>.</p>
-<h3 id='attributes'>Attributes</h3>
+
 <table><thead>
 <tr>
 <th>Attribute</th>
@@ -1544,10 +1544,10 @@ you will receive a response which requires additional signing.</p>
   </span><span class="s2">"transaction_hash"</span><span class="p">:</span><span class="w"> </span><span class="s2">"c51232abf42935a52d6c27122e5de5f92b33ffc43f9a85c5ee6353009c81f80c"</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
-<p>When an order created, the order matching engine will match the order against existing offers.
-  If the order fills any offer, the matching engine will generate a <code>fill</code> transaction within the order.
+<p>When an order is created, the order matching engine will match the order against existing offers.
+  If the order fills any offer, the matching engine will generate a <code>fill</code> transaction that is returned with the order.
   This transaction must be signed when using the <a href="#execute-order">broadcast order endpoint</a>.</p>
-<h3 id='attributes-2'>Attributes</h3>
+
 <table><thead>
 <tr>
 <th>Attribute</th>
@@ -1584,7 +1584,7 @@ you will receive a response which requires additional signing.</p>
 </tr>
 <tr>
 <td>fee_asset_id</td>
-<td><a href="#supported-assets">Asset id</a> of the token is used for fees.</td>
+<td><a href="#supported-assets">Asset id</a> of the token used for fees.</td>
 </tr>
 <tr>
 <td>fee_amount</td>
@@ -1674,7 +1674,7 @@ you will receive a response which requires additional signing.</p>
 <td>contract_hash</td>
 <td><strong>string</strong></td>
 <td>yes</td>
-<td>Only returns orders from this <a href="#contract-hash">contract hash</a>.</td>
+<td>Only returns orders from this <a href="#contracts">contract hash</a>.</td>
 </tr>
 </tbody></table>
 <h3 id='example-7'>Example</h3>
@@ -1849,7 +1849,7 @@ A successful order will have zero or one <strong>make</strong> and/or zero or mo
 <td>contract_hash</td>
 <td><strong>string</strong></td>
 <td>yes</td>
-<td>Switcheo Exchange <a href="#contract-hash">contract hash</a> to execute the order on.</td>
+<td>Switcheo Exchange <a href="#contracts">contract hash</a> to execute the order on.</td>
 </tr>
 </tbody></table>
 <h3 id='example-8'>Example</h3>
@@ -2204,7 +2204,7 @@ and the decimal point itself should be dropped.</p>
 <td>contract_hashes</td>
 <td><strong>array</strong></td>
 <td>yes</td>
-<td>Only return balances from these <a href="#contract-hash">contract hashes</a>.</td>
+<td>Only return balances from these <a href="#contracts">contract hashes</a>.</td>
 </tr>
 </tbody></table>
 <h3 id='example-12'>Example</h3>
@@ -2343,6 +2343,10 @@ and the decimal point itself should be dropped.</p>
 <tr>
 <td>406</td>
 <td>Not Acceptable -- You requested a format that isn&#39;t json.</td>
+</tr>
+<tr>
+<td>429</td>
+<td>Too Many Requests -- Slow down requests and use Exponential backoff timing.</td>
 </tr>
 <tr>
 <td>422</td>
